# TrajOpt-Docker

./: README.md
docker/: Dockerfile
ros_pkgs/test_ct_gtam/: CMakeLists.txt  package.xml
ros_pkgs/test_ct_gtam/info/: infoDir.h  infoDir.h.in
ros_pkgs/test_ct_gtam/src/: ct_ilqr.cpp  test_ct.cpp  test_gtsam.cpp  test_noisemodel.cpp
